(re-)introduce selection sensitivity for skill chart panel